welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:17: error: not found: value save
    save()
    ^Array1:30: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
    setCouleurBrosse()=T(i)
    ^